--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -66,7 +66,9 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif"
                 android:textSize="15sp"
-                android:textStyle="normal" />
+                android:textStyle="normal"
+                android:justificationMode="inter_word"
+                />
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
