--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_h1_size">19sp</dimen>
+    <dimen name="app_h2_size">14sp</dimen>
     <dimen name="app_h3_size">15sp</dimen>
     <dimen name="app_h5_size">18sp</dimen>
     <dimen name="app_h4_size">16sp</dimen>
